fix: fix clipping issues when board is massive

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@
   height: 100vh;
 
   overflow: auto;
+
+  padding: 10px;
 }
 
 a {
